--- a/sixman/src/main/webapp/resources/css/noticeDetail.css
+++ b/sixman/src/main/webapp/resources/css/noticeDetail.css
@@ -1,1 +1,145 @@
 @charset "UTF-8";
+
+#notice-box{
+    gap: 30px;
+}
+
+.title-box{
+    gap: 0;
+}
+
+.title-box span{
+    font-size: 2.5em;
+    cursor: pointer;
+}
+
+.first-item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 0 20px;
+    height: 10%;
+}
+
+.first-item div:nth-of-type(1){
+    font-size: 1.5em;
+}
+
+.first-item div:nth-of-type(2){
+    display: flex;
+    font-size: 0.9em;
+    gap: 5px;
+    color: var(--bo-60);
+}
+
+#file-box{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    position: relative;
+}
+
+.file-item{
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--bo-20);
+    border-radius: 5px;
+    height: 40px;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: rgba(255, 255, 255);
+}
+.file-item > div{
+    width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#file-box > div:nth-of-type(1){
+    display: flex;
+}
+
+#file-box > div:nth-of-type(2){
+    display: flex;
+    font-size: 0.7em;
+    color: var(--bo-40);
+}
+
+label[for=list-check]{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 22px;
+    height: 22px;
+    margin: 8px;
+}
+
+input[id=list-check]{
+    display: none;
+}
+
+#file-list{
+    padding-right: 10px;
+    height: 40px;
+    overflow: hidden;
+    position: absolute;
+    left: 60px;
+    z-index: 2;
+}
+
+#list-check:checked ~ #file-list{
+    height: auto;
+    overflow-y: visible;
+}
+
+#list-check:checked ~ label[for=list-check]{
+    background-color: var(--main-color);
+    border-radius: 5px;
+    color: white;
+}
+
+.list-box{
+    border-bottom: 1px solid black;
+}
+
+#content-box{
+    padding: 0 10px;
+}
+
+#board-footer{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px;
+}
+
+#board-footer .btn{
+    width: 120px;
+    height: 40px;
+}
+
+#before-next > div{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 15px;
+}
+
+#before-next > div > p:nth-of-type(1){
+    color: var(--main-color);
+}
+
+#before-next > div > p:nth-of-type(2){
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 300px;
+}
+
+#before-next > div > p:nth-of-type(3){
+    font-size: 0.8em;
+    color: var(--bo-40);
+}
