화면작업 로그인페이지 [완료]  -기업로고, 식스맨로고, 아이디박스, 패스워드박스, 로그인버튼

--- a/sixman/src/main/webapp/resources/css/main.css
+++ b/sixman/src/main/webapp/resources/css/main.css
@@ -11,6 +11,7 @@ body{
     --bo-60: rgba(0, 0, 0, 0.6);
     --bo-80: rgba(0, 0, 0, 0.8);
     font-family: Pretendard;
+    accent-color: #12887a;
 }
 body *{
     box-sizing: border-box;
