공지사항 - 디테일, 작성, 리스트 화면구현 완료                  - js, 링크연결 필요 메일 - 작성, 리스트 화면구현 완료          - 디테일화면 작성 중

--- a/sixman/src/main/webapp/resources/css/main.css
+++ b/sixman/src/main/webapp/resources/css/main.css
@@ -231,4 +231,25 @@ font-variation-settings:
 }
 .c-btn:hover{
     border: 1px solid var(--main-color);
+    color: var(--bo-40);
+}
+.c-btn:hover *{
+    color: var(--bo-40);
+}
+a:hover{
+    border: none;
+    outline: none;
+    text-decoration:none;
+}
+a{
+    border: none;
+    outline: none;
+    text-decoration:none;
+}
+.t-btn{
+    color: var(--bo-40);
+    cursor: pointer;
+}
+.t-btn:hover{
+    color: var(--bo-80);
 }
