--- a/sixman/src/main/webapp/resources/css/list.css
+++ b/sixman/src/main/webapp/resources/css/list.css
@@ -51,10 +51,11 @@
 
 .search-bar input{
     width: 120px;
+    height: 15px;
     border: none;
     background: none;
     outline: none;
-    font-size: 15px;
+    font-size: 12px;
     color: var(--bo-80);
 }
 
