--- a/sixman/src/main/webapp/resources/css/mainPage.css
+++ b/sixman/src/main/webapp/resources/css/mainPage.css
@@ -1,6 +1,9 @@
+*{
+    margin: 0;
+}
 #main-page2{
     display: grid;
-    grid-template-columns: 1.2fr 2.4fr 1fr;
+    grid-template-columns: 1.3fr 3fr 1fr;
     gap: 40px;
     height: 100%;
 }
@@ -74,9 +77,16 @@
     white-space: nowrap;
     overflow: hidden;
 }
+.item-box .box-item{
+    font-size: 0.8em;
+}
+
 .box-item{
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr 7fr 1fr;
     margin-bottom: 4px;
+    gap: 10px;
+    width: 100%;
 }
 #mail-list > div:first-of-type{
     padding: 5px 0;
@@ -87,7 +97,6 @@
     color: var(--main-color);
 }
 .box-item > p:nth-of-type(2){
-    width: 68%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -95,10 +104,6 @@
 
 .box-item > p:nth-of-type(3){
     color: var(--bo-40)
-}
-
-.box-item > p:not(:first-of-type){
-    margin-left: 10px;
 }
 
 #main-mail > div:nth-of-type(1) > span{
