--- a/sixman/bin/src/main/webapp/resources/css/mail/mailWrite.css
+++ b/sixman/bin/src/main/webapp/resources/css/mail/mailWrite.css
@@ -32,7 +32,7 @@
     width: fit-content;
 }
 
-input:not([type=submit]){
+input{
     border: none;
     width: 100%;
     border-bottom: 1px solid var(--bo-40);
