--- a/sixman/src/main/webapp/resources/css/mail/mailWrite.css
+++ b/sixman/src/main/webapp/resources/css/mail/mailWrite.css
@@ -135,7 +135,7 @@ button.btn:hover{
 }
 
 .members-item input[type=email]{
-    width: 120px;
+    width: fit-content;
     text-align:center;
     border: none;
 }
