--- a/sixman/src/main/webapp/resources/css/addressBook/receive.css
+++ b/sixman/src/main/webapp/resources/css/addressBook/receive.css
@@ -2,17 +2,11 @@
     display: flex;
     width: 100%;
     height: 100%;
-    gap: 40px;
     position: relative;
 }
 
-#myaddress-wrap {
-    width: 18%;
-    height: 100%;
-}
-
-#addressBook-wrap {
-    width: 82%;
+#receive-wrap {
+    width: 100%;
     height: 100%;
     padding: 40px 30px 10px 30px;
 }
@@ -39,12 +33,12 @@
     margin-bottom: 2px;
 }
 
-.address-search {
+.sender-search {
     display: flex;
     align-items: flex-end;
 }
 
-.address-search form {
+.sender-search form {
     width: 100%;
     height: 100%;
     display: flex;
@@ -52,7 +46,7 @@
     margin: 10px 0;
 }
 
-.address-search input[type='text'] {
+.sender-search input[type='text'] {
     width: 150px;
     height: 25px;
     margin: 0px 7px 0px 5px;
@@ -61,14 +55,14 @@
     outline-color: var(--main-color);
 }
 
-.address-search select {
+.sender-search select {
     font-size: 12px;
     border: 1px solid var(--bo-40);
     border-radius: 2px;
     outline-color: var(--main-color);
 }
 
-.address-search input[type='submit'] {
+.sender-search input[type='submit'] {
     border: none;
     color: #fff;
     background-color: var(--main-color);
@@ -77,7 +71,7 @@
     border-radius: 2px;
 }
 
-.address-search input[type='submit']:hover {
+.sender-search input[type='submit']:hover {
     background-color: #17a897;
 }
 
