--- a/sixman/src/main/webapp/resources/css/main.css
+++ b/sixman/src/main/webapp/resources/css/main.css
@@ -200,6 +200,7 @@ font-variation-settings:
     max-width: 100vw;
     min-height: 100vh;
     display: grid;
+    background-color: rgba(0, 0, 0, 0.03);
 }
 .btn{
     display: flex;
