--- a/sixman/src/main/webapp/resources/css/attendance/attendanceBoard.css
+++ b/sixman/src/main/webapp/resources/css/attendance/attendanceBoard.css
@@ -41,7 +41,6 @@
     align-items: center;
 }
 
-
 #notice-box{
     padding: 20px;
     display: flex;
@@ -228,6 +227,7 @@
     padding: 0 20px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .list-item p:not(:nth-of-type(2)){
     justify-content: center;
