--- a/sixman/src/main/webapp/resources/css/main.css
+++ b/sixman/src/main/webapp/resources/css/main.css
@@ -29,6 +29,7 @@ font-variation-settings:
 .box{
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+    background-color: white;
 }
 .center{
     display: flex;
