--- a/sixman/src/main/webapp/resources/css/admin/project/consent.css
+++ b/sixman/src/main/webapp/resources/css/admin/project/consent.css
@@ -1,27 +1,9 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    box-sizing: border-box;
-}
-
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-}
-
-#main-box{
-    border: 1px solid #aaa;
-    border-radius: 3px;
-    box-shadow: 1px 1px 1px 1px #D3D3D3;
-}
 
 .consent-box{
-    width: 1050px;
-    height: 600px;
-    margin: 50px;
+    width: 100%;
+    height: 100%;
+    padding: 100px;
+    background-color: white;
 }
 
 .consent-title{
@@ -43,10 +25,14 @@ body{
 .project-list{
     --background-color: #aaa;
     height: 400px;
+    width: 100%;
 }
 
 .project-item{
+    display: flex;
+    align-items: center;
     border-bottom: 1px solid #aaa;
+    width: 100%;
     margin-top: 3px;
     margin-bottom: 8px;
 }
@@ -75,11 +61,18 @@ body{
     border: none;
     font-size: 15px;
     line-height: 34px;
-    background-color: transparent;
     cursor: pointer;
 }
 
 .footer-btn:hover{
     background-color: rgb(197, 197, 197);
     border-radius: 5px;
+}
+
+label {
+    display: flex;
+    align-content: center;
+    height: 50px;
+    width: 100%;
+    border-bottom: 1px solid #aaa;
 }
