--- a/sixman/src/main/webapp/resources/css/notice/noticeDetail.css
+++ b/sixman/src/main/webapp/resources/css/notice/noticeDetail.css
@@ -57,6 +57,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.file-item > span{
+    cursor: pointer;
+}
 
 #file-box > div:nth-of-type(1){
     display: flex;
