--- a/sixman/bin/src/main/webapp/resources/css/main.css
+++ b/sixman/bin/src/main/webapp/resources/css/main.css
@@ -29,6 +29,7 @@ font-variation-settings:
 .box{
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+    background-color: white;
 }
 .center{
     display: flex;
@@ -96,7 +97,7 @@ font-variation-settings:
     width: 40px;
     height: 40px;
 }
-#my-menu article span{
+#my-menu > article > span{
     font-size: 35px;
     color: var(--main-color);
 }
@@ -200,6 +201,7 @@ font-variation-settings:
     max-width: 100vw;
     min-height: 100vh;
     display: grid;
+    background-color: rgba(0, 0, 0, 0.03);
 }
 .btn{
     display: flex;
@@ -210,12 +212,14 @@ font-variation-settings:
     border-radius: 5px;
     padding: 5px;
     cursor: pointer;
+    color: white;
 }
 .btn *{
     color: white;
 }
 .btn:hover{
     background-color: #17a897;
+    color: white;
 }
 .c-btn{
     display: flex;
@@ -226,9 +230,13 @@ font-variation-settings:
     padding: 5px;
     cursor: pointer;
     font-weight: 700;
+    background-color: white;
+    border: none;
+    color: var(--bo-40);
 }
 .c-btn *{
     color: var(--bo-40);
+    background-color: white;
 }
 .c-btn:hover{
     border: 1px solid var(--main-color);
@@ -288,4 +296,89 @@ a{
 }
 .page-box span:hover{
     color: black
+}
+
+/* 메뉴바 알람 설정 */
+#alarm{
+    position: relative;
+}
+
+#alarm span:hover{
+    color: var(--main-color-dark);
+}
+
+#alarm-box{
+    position: absolute;
+    width: 300px;
+    height: 500px;
+    right: 10px;
+    background-color: white;
+    top: -500px;
+    z-index: 2;
+    border: 1px solid var(--main-color);
+}
+
+#inner-box{
+    width: 100%;
+    position: relative;
+    margin: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+    padding: 5px;
+    padding-left: 10px;
+}
+
+.alarm-item{
+    width: 100%;
+    height: 50px;
+    border-bottom: 1px solid var(--bo-40);
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.alarm-item:hover{
+    color: var(--main-color);
+}
+
+.item-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    font-size: 0.7em;
+}
+
+.item-header > div:last-child{
+    color: var(--bo-40);
+}
+
+.item-title{
+    font-size: 0.9em;
+    font-weight: 600;
+    width: 250px;
+    margin-top: 3px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#alarm-count{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    right: 5px;
+    top: 5px;
+    color: white;
+    font-size: 0.5em;
+    font-weight: 700;
 }
