--- a/sixman/bin/src/main/webapp/resources/css/notice/noticeDetail.css
+++ b/sixman/bin/src/main/webapp/resources/css/notice/noticeDetail.css
@@ -57,6 +57,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.file-item > span{
+    cursor: pointer;
+}
 
 #file-box > div:nth-of-type(1){
     display: flex;
@@ -117,7 +120,8 @@ input[id=list-check]{
     padding: 0 30px;
 }
 
-#board-footer .btn{
+#board-footer .btn,
+#board-footer .c-btn{
     width: 120px;
     height: 40px;
 }
@@ -143,4 +147,9 @@ input[id=list-check]{
 #before-next > div > p:nth-of-type(3){
     font-size: 0.8em;
     color: var(--bo-40);
+}
+
+#btn-box{
+    display: flex;
+    gap: 10px;
 }
