--- a/sixman/bin/src/main/webapp/resources/css/notice/noticeList.css
+++ b/sixman/bin/src/main/webapp/resources/css/notice/noticeList.css
@@ -62,6 +62,7 @@
 .search-bar span{
     font-size: 1.3em;
     color: gray;
+    cursor: pointer;
 }
 
 .list-box{
@@ -78,14 +79,15 @@
     cursor: pointer;
 }
 .list-item p{
-    padding: 0 20px;
     display: flex;
     align-items: center;
-}
-.list-item p:not(:nth-of-type(2)){
     justify-content: center;
 }
-.list-item:hover p{
+.list-item p:nth-of-type(2){
+    padding-left: 50px;
+    justify-self: start;
+}
+.list-item:hover p:not(.important){
     color: var(--main-color);
 }
 .first-item{
@@ -132,4 +134,14 @@
 }
 .page-box span:hover{
     color: black
+}
+
+.important{
+    justify-self: center;
+    align-self: center;
+    background-color: var(--main-color);
+    width: 60%;
+    height: 80%;
+    border-radius: 10px;
+    color: white;
 }
