--- a/sixman/bin/src/main/webapp/resources/css/reset.css
+++ b/sixman/bin/src/main/webapp/resources/css/reset.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, img, ins, kbd, q, s, samp,
 sub, sup, tt, var,
-u, i, center,
+u, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
