--- a/sixman/src/main/webapp/resources/css/project/create.css
+++ b/sixman/src/main/webapp/resources/css/project/create.css
@@ -13,7 +13,9 @@
 }
 
 .body-box{
+    padding: 40px;
     border: 1px solid black;
+    height: 650px;
 }
 
 .prj{
@@ -27,40 +29,207 @@
     text-align: center;
     line-height: 40px;
     border-radius: 5px;    
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 
-span{
-    width: 60%;
+.box1 div:first-child{
+    margin-right: 20px;
 }
 
+input[name='prj_name']{
+    margin-top: 5px;
+    width: 250px;
+    height: 30px;
+}
+
+/* span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+
+/* 프로젝트명 box */
 .name-box{
+    display: flex;
+    justify-content: space-between;
+}
+
+.box1 , .box2 {
     display: flex;
 }
 
+.box2 button:first-child{
+    margin-right: 10px;
+}
+
+/* 버튼 */
 .cbtn{
     width: 120px;
     height: 40px;
     display: flex;
     justify-content: end;
+    border: none;
 }
 
-.content{
-    width: 60%;
-    height: 300px;
+/* 일정 */
+
+input[name='prjDate1'],
+input[name='prjDate2'] {
+    margin-top: 11px;
+    width: 20%;
+    height: 20%;
+}
+
+.line > p {
+    margin: 15px;
+}
+
+select {
+    width: 15%;
+    height: 15%;
+}
+
+/* 팀 select */
+.select {
+    width: 15%;
+    height: 15%;
+    position: relative;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: #fff;
+    display: flex;
+    padding: 5px 10px;
+    margin-right: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.select .option-list {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    max-height: 0;
+
+    background-color: #fff;
+}
+
+.select.active .option-list {
+    max-height: none;
+}
+.option-wrap {
+    display: flex;
+}
+.select:hover {
+    color: #333;
+}
+
+.select .text {
+    width: 100%;
+    font-size: 13px;
+    text-align: center;
+}
+.select .option-list {
+    font-size: 13px;
+    list-style: none;
+    padding: 0;
+    border-radius: 5px;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+}
+.select .option-list .option {
+    width: 100%;
+    display: flex;
+    padding: 3px 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.remove-position {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.remove-position:hover span {
+    color: #ff2e2e;
+}
+
+.select .option-list .option:hover + .remove-position,
+.select .option-list .option:hover {
+    background-color: #2e7aff;
+    color: #fff;
+}
+
+/* 프로젝트 내용 */
+.content {
+    resize: none;
+    width: 75%;
+    height: 140px;
+}
+
+/* 첨부파일 */
+#file-btn span {
+    width: 100%;
 }
 
 #file-btn{
-    width: 40px;
-    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
     text-align: center;
+}
+
+#file-box {
+    margin-left: 50px;
+    width: 51%;
+    height: 100px;
+    border: 1px solid black;
 }
 
 .line{
     display: flex;
 }
 
+
+/* 참여자 멤버 */
+.member_1 {
+    display: flex;
+}
+
+.line {
+    display: flex;
+}
+
+.team-member-box {
+    padding: 10px;
+    margin-left: 50px;
+    margin-bottom: 15px;
+    border: 1px solid black;
+    width: 36%;
+    height: 150px;
+}
+
+.member {
+    color: #2e7aff;
+}
+/* Side box 달력 */
 .side-box{
+    display: flex;
     width: 30%;
     height: 100%;
-    background-color: #D3D3D3;
+}
+
+.calendar {
+    margin-top: 400px;
+    width: 100%;
+    
+}
+
+.header {
+    display: flex;
 }
