--- a/sixman/src/main/webapp/resources/css/documentApprove.css
+++ b/sixman/src/main/webapp/resources/css/documentApprove.css
@@ -7,12 +7,13 @@
     flex-direction: column;
 }
 .document-save{
-    
+   
     font-size: 3em;
     font-weight: 600;
     color: rgb(83, 83, 83);
 }
 .document-save button{
+ 
     width: 1000px;
     border-radius: 5px;
     border-radius: 15%;
@@ -29,6 +30,7 @@
 
 .list-box{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     
 }
@@ -44,4 +46,9 @@
     background-color: rgb(155, 155, 155);
     height: 50px;
     font-size: 1.3em;
+}
+.list-item{
+    padding-left: 30px;
+    padding-top: 10px;
+    align-items: center;
 }
