채팅페이지생성, 채팅방진입페이지생성, 메신저친구목록화면 전면작업, 채팅방이름설정화면 생성

--- a/sixman/src/main/webapp/resources/css/messenger.css
+++ b/sixman/src/main/webapp/resources/css/messenger.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
 .messenger-whole{
-	width:420px;
-	height:80%;
+	width:30%;
+	
 	position:absolute;
-	z-index:100%;
+	z-index:100;
 	right:0;
 	top:6%;
 	border: 2px solid black;
@@ -22,12 +22,19 @@
 .bottom-area{
 
 	width:88%;
-	height:0.6%;
+	height:0.2%;
 	border:2px solid #0E6D62;
 	background-color: #0E6D62;
 	margin:4%;
 }
+.bottom-area2{
 
+	width:88%;
+	height:6%;
+	border:2% solid #0E6D62;
+	background-color: #0E6D62;
+	margin:4%;
+}
 #main-center-text1{
 	margin-top:80%;
 	text-align: center;
@@ -53,30 +60,41 @@
 	
 }
 
+.textbox-messenger-area2{
+
+}
+
+.textbox-messenger-area3{
+
+}
+
 .subtitle{
-	margin:10%;
 	font-size:200%;
+	margin-top:4%;
 }
 
 .team-name{
 	margin-left:40%;
 	margin-right:10%;
+	margin-top:4%;
+	font-size:100%;
 }
 
 .with-chat-name{
-	margin-left:40%;
 	margin-top:10%;
+	width:25%;
 }
 
 
 .with-chat-grade{
-	margin-right:30%;
+	margin-right:10%;
 	margin-top:10%;
+	width:25%;
 }
 
 .with-chat-data{
 	display:flex;
-	justify-content : space-between;
+	justify-content : space-around;
 }
 
 .profile-circle{
@@ -88,18 +106,81 @@
 }
 
 .team-area{
-	margin-left:10%;
-	
+	margin-left:8%;
+	font-size:28px;
+	color:#008000;
+	font-style: bold;
 }
 
 .team-whole-data{
 	display:flex;
-	font-size: 20px;
+	font-size: 100%;
+	margin-top:10%;
 }
 
 .text-messenger-settings{
-	border : 2px solid #000000;
 	margin:8%;
 	background-color: white;
-	z-index:20%;
+	z-index:20;
+	box-shadow: 0px 0px 2px 2px grey;
 }
+
+.team-people-data::-webkit-scrollbar{
+	width:10px;
+}
+.team-people-data::-webkit-scrollbar-thumb{
+/* 	background-color: #000000; */
+}
+.team-people-data::-webkit-scrollbar-track{
+	background-color: gray;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48;
+  margin-left:2%;
+}
+
+
+
+.showup{
+	display: flex;
+	margin-top:10%;
+	margin-bottom:10%;
+}
+
+.square{
+	width:20%;
+	background-color: #0E6D62; 
+	border:2px solid #0E6D62;
+	border-radius: 100%;
+	margin-left:10%;
+	margin-right:30%;
+}
+
+.button-list{
+	display:flex;
+	justify-content: space-around;
+	margin-bottom:10%;
+}
+
+.who-chat-roomname{
+	margin:10%;
+	font-size:200%;
+}
+
+.define-roomname{
+	margin-left:10%;
+	width:60%;
+}
+
+.btn-height{
+	margin:10%;
+	margin-left:50%;
+}
+
+.checkbox-square input[type="checkbox"]{display : none}
+
