--- a/sixman/src/main/webapp/resources/css/mail/mailWrite.css
+++ b/sixman/src/main/webapp/resources/css/mail/mailWrite.css
@@ -14,6 +14,7 @@ p{
     grid-template-columns: 1.5fr 1fr 15fr;
     row-gap: 5px;
     justify-items: center;
+    align-items: center;
     padding: 0 40px;
     margin: 30px 0;
 }
